force-app/main/default/objects/Cycle_Event_Variables__c/Cycle_Event_Variables__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Cycle Event Variables</label>
</CustomObject>