force-app/main/default/objects/Cycle_Event_Variables__c/fields/Biopsy_ID__c.field-meta.xml
<CustomField>
    <fullName>Biopsy_ID__c</fullName>
    <label>Biopsy ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>