force-app/main/default/objects/Cycle_Event_Variables__c/fields/Blood_Room__c.field-meta.xml
<CustomField>
    <fullName>Blood_Room__c</fullName>
    <label>Blood Room</label>
    <length>20</length>
    <type>Text</type>
</CustomField>