force-app/main/default/objects/Cycle_Event_Variables__c/fields/Book_Blood_QueueID__c.field-meta.xml
<CustomField>
    <fullName>Book_Blood_QueueID__c</fullName>
    <label>Book Blood QueueID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>