force-app/main/default/objects/Cycle_Event_Variables__c/fields/Bundles__c.field-meta.xml
<CustomField>
    <fullName>Bundles__c</fullName>
    <label>Bundles</label>
    <length>20</length>
    <type>Text</type>
</CustomField>