force-app/main/default/objects/Cycle_Event_Variables__c/fields/Bundles_Scan__c.field-meta.xml
<CustomField>
    <fullName>Bundles_Scan__c</fullName>
    <label>Bundles Scan</label>
    <length>20</length>
    <type>Text</type>
</CustomField>