force-app/main/default/objects/Cycle_Event_Variables__c/fields/Change_Over__c.field-meta.xml
<CustomField>
    <fullName>Change_Over__c</fullName>
    <label>Change Over</label>
    <length>20</length>
    <type>Text</type>
</CustomField>