force-app/main/default/objects/Cycle_Event_Variables__c/fields/Closed_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Closed_Cycle__c</fullName>
    <label>Closed Cycle</label>
    <length>20</length>
    <type>Text</type>
</CustomField>