force-app/main/default/objects/Cycle_Event_Variables__c/fields/Collection_Room__c.field-meta.xml
<CustomField>
    <fullName>Collection_Room__c</fullName>
    <label>Collection Room</label>
    <length>50</length>
    <type>Text</type>
</CustomField>