force-app/main/default/objects/Cycle_Event_Variables__c/fields/Day_1_ID__c.field-meta.xml
<CustomField>
    <fullName>Day_1_ID__c</fullName>
    <label>Day 1 ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>