force-app/main/default/objects/Cycle_Event_Variables__c/fields/Day_6_Assessment_ID__c.field-meta.xml
<CustomField>
    <fullName>Day_6_Assessment_ID__c</fullName>
    <label>Day 6 Assessment ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>