force-app/main/default/objects/Cycle_Event_Variables__c/fields/Deleted_Calendar__c.field-meta.xml
<CustomField>
    <fullName>Deleted_Calendar__c</fullName>
    <label>Deleted Calendar</label>
    <length>20</length>
    <type>Text</type>
</CustomField>