force-app/main/default/objects/Cycle_Event_Variables__c/fields/Denuding_ID__c.field-meta.xml
<CustomField>
    <fullName>Denuding_ID__c</fullName>
    <label>Denuding ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>