force-app/main/default/objects/Cycle_Event_Variables__c/fields/Egg_Thaw_Event_ID__c.field-meta.xml
<CustomField>
    <fullName>Egg_Thaw_Event_ID__c</fullName>
    <label>Egg Thaw Event ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>