force-app/main/default/objects/Cycle_Event_Variables__c/fields/Egg_Vitrification_Event_ID__c.field-meta.xml
<CustomField>
    <fullName>Egg_Vitrification_Event_ID__c</fullName>
    <label>Egg Vitrification Event ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>