force-app/main/default/objects/Cycle_Event_Variables__c/fields/Embryo_Vitrification_ID__c.field-meta.xml
<CustomField>
    <fullName>Embryo_Vitrification_ID__c</fullName>
    <label>Embryo Vitrification ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>