force-app/main/default/objects/Cycle_Event_Variables__c/fields/Fertilisation_Check_ID__c.field-meta.xml
<CustomField>
    <fullName>Fertilisation_Check_ID__c</fullName>
    <label>Fertilisation Check ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>