force-app/main/default/objects/Cycle_Event_Variables__c/fields/Insemination_ID__c.field-meta.xml
<CustomField>
    <fullName>Insemination_ID__c</fullName>
    <label>Insemination ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>