force-app/main/default/objects/Cycle_Event_Variables__c/fields/Intra_Uterine_Insemination_ID__c.field-meta.xml
<CustomField>
    <fullName>Intra_Uterine_Insemination_ID__c</fullName>
    <label>Intra-Uterine Insemination ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>