force-app/main/default/objects/Cycle_Event_Variables__c/fields/IUI_ID__c.field-meta.xml
<CustomField>
    <fullName>IUI_ID__c</fullName>
    <label>IUI ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>