force-app/main/default/objects/Cycle_Event_Variables__c/fields/Library__c.field-meta.xml
<CustomField>
    <fullName>Library__c</fullName>
    <label>Library</label>
    <length>20</length>
    <type>Text</type>
</CustomField>