force-app/main/default/objects/Cycle_Event_Variables__c/fields/Notes_Calendar__c.field-meta.xml
<CustomField>
    <fullName>Notes_Calendar__c</fullName>
    <label>Notes Calendar</label>
    <length>20</length>
    <type>Text</type>
</CustomField>