force-app/main/default/objects/Cycle_Event_Variables__c/fields/OPU_ID__c.field-meta.xml
<CustomField>
    <fullName>OPU_ID__c</fullName>
    <label>OPU ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>