force-app/main/default/objects/Cycle_Event_Variables__c/fields/OPU_Preparation_Event__c.field-meta.xml
<CustomField>
    <fullName>OPU_Preparation_Event__c</fullName>
    <label>OPU Preparation Event</label>
    <length>20</length>
    <type>Text</type>
</CustomField>