force-app/main/default/objects/Cycle_Event_Variables__c/fields/Ovulation_Event_ID__c.field-meta.xml
<CustomField>
    <fullName>Ovulation_Event_ID__c</fullName>
    <label>Ovulation Event ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>