force-app/main/default/objects/Cycle_Event_Variables__c/fields/Patient_Services_Queue__c.field-meta.xml
<CustomField>
    <fullName>Patient_Services_Queue__c</fullName>
    <label>Patient Services Queue</label>
    <length>20</length>
    <type>Text</type>
</CustomField>