force-app/main/default/objects/Cycle_Event_Variables__c/fields/Post_Thaw_Day_5_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Post_Thaw_Day_5_Assessment__c</fullName>
    <label>Post Thaw Day 5 Assessment</label>
    <length>20</length>
    <type>Text</type>
</CustomField>