force-app/main/default/objects/Cycle_Event_Variables__c/fields/Pre_Implantation_Genetic_Testing_ID__c.field-meta.xml
<CustomField>
    <fullName>Pre_Implantation_Genetic_Testing_ID__c</fullName>
    <label>Pre-Implantation Genetic Testing ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>