force-app/main/default/objects/Cycle_Event_Variables__c/fields/Pregnancy_Scan__c.field-meta.xml
<CustomField>
    <fullName>Pregnancy_Scan__c</fullName>
    <label>Pregnancy Scan</label>
    <length>20</length>
    <type>Text</type>
</CustomField>