force-app/main/default/objects/Cycle_Event_Variables__c/fields/Pregnancy_Test__c.field-meta.xml
<CustomField>
    <fullName>Pregnancy_Test__c</fullName>
    <label>Pregnancy Test</label>
    <length>20</length>
    <type>Text</type>
</CustomField>