force-app/main/default/objects/Cycle_Event_Variables__c/fields/Procedure_Room__c.field-meta.xml
<CustomField>
    <fullName>Procedure_Room__c</fullName>
    <label>Procedure Room</label>
    <length>50</length>
    <type>Text</type>
</CustomField>