force-app/main/default/objects/Cycle_Event_Variables__c/fields/Sperm_Preparation_ID__c.field-meta.xml
<CustomField>
    <fullName>Sperm_Preparation_ID__c</fullName>
    <label>Sperm Preparation ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>