force-app/main/default/objects/Cycle_Event_Variables__c/fields/Staff_Generated_Result__c.field-meta.xml
<CustomField>
    <fullName>Staff_Generated_Result__c</fullName>
    <label>Staff Generated Result</label>
    <length>20</length>
    <type>Text</type>
</CustomField>