force-app/main/default/objects/Cycle_Event_Variables__c/fields/System_Generated_Result__c.field-meta.xml
<CustomField>
    <fullName>System_Generated_Result__c</fullName>
    <label>System Generated Result</label>
    <length>20</length>
    <type>Text</type>
</CustomField>