force-app/main/default/objects/Cycle_Event_Variables__c/fields/Theatre__c.field-meta.xml
<CustomField>
    <fullName>Theatre__c</fullName>
    <label>Theatre</label>
    <length>20</length>
    <type>Text</type>
</CustomField>