force-app/main/default/objects/Cycle_Event_Variables__c/fields/Trigger_Event_ID__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Event_ID__c</fullName>
    <label>Trigger Event ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>